<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddRecordActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/addRecordActivityComment"
        android:layout_width="215dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/add_comment"
        android:inputType="text|textPersonName"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/addRecordActivityTakePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addRecordActivityTitle"
        android:layout_width="215dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/add_title"
        android:inputType="text|textPersonName"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/addRecordActivityComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/addRecordActivityImagePreview"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/record_photo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/addRecordActivityTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecordActivityNavigationTitle"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/addRecordActivityNavigationTitle"
        android:layout_width="334dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/AddRecordActivity_navigation_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addRecordActivitySaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/generic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addRecordActivityAddGeoButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/AddRecordActivity_set_location"
        app:layout_constraintBottom_toTopOf="@+id/addRecordActivitySaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/AddRecordActivityLocationSelectedTitle"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/AddRecordActivity_current_selected_location"
        app:layout_constraintBottom_toTopOf="@+id/addRecordActivityAddGeoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addRecordActivityTakePhoto"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/addPhoto"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/addRecordActivityAddReferenceImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addRecordActivityAddReferenceImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="8dp"
        android:text="@string/take_Reference_Photo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/AddRecordActivityLocationSelectedTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>